--- a/src/components/layouts.module.css
+++ b/src/components/layouts.module.css
@@ -10,6 +10,7 @@
     display: flex;
     list-style: none;
     padding-left: 0;
+    text-decoration: none;
 }
 .nav-link-item {
     padding-right: 2rem;
