--- a/src/components/layouts.module.css
+++ b/src/components/layouts.module.css
@@ -10,7 +10,7 @@
     display: flex;
     list-style: none;
     padding-left: 0;
-    text-decoration: none;
+    text-decoration: double;
 }
 .nav-link-item {
     padding-right: 2rem;
